# riinguist

./: .gitignore  Cargo.toml  Readme.md
src/: definition.rs  main.rs  scraper.rs
