[package]
name = "riinguist"
description = "Riichi Mahjong linguist bot for Discord"
version = "1.0.1"
edition = "2018"
publish = false

[dependencies]
dotenv = "0.15.0"
log = "0.4.14"
once_cell = "1.8.0"
regex = "1.5.4"
reqwest = "0.11.5"
rust-fuzzy-search = "0.1.1"
scraper = "0.12.0"
serenity = "0.10"
simplelog = "0.10.2"
tokio = {version = "1.12.0", features = ["rt-multi-thread"]}